hotfix: 안드로이드, ios clientID 대응